# advent-of-code-2021

./: .gitignore  Cargo.toml  LICENSE  README.md  solve.sh
src/: day1.rs  day2.rs  day6.rs  day7.rs  prelude.rs
