[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Chris Hutchinson <chris@cshutchinson.com>"]
edition = "2018"

[dependencies]
itertools = "0.10.1"
lazy_static = "1.4.0"
regex = "1.5.4"
petgraph = "0.6.0"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"